--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Practical Exam</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assist/css/style.css">
@@ -45,9 +45,9 @@
               </li>
             </ul>
             <div class="icon-nav d-flex">
-               <div class="icon"><i class="fas fa-search"></i></div>
-               <div class="icon"><i class="fas fa-user"></i></div>
-               <div class="icon"><i class="fas fa-shopping-bag"></i></div>
+               <a class="icon nav-link text-black" href="#"><i class="fas fa-search"></i></a>
+               <a class="icon nav-link text-black" href="#"><i class="fas fa-user"></i></a>
+               <a class="icon nav-link text-black" href="#"><i class="fas fa-shopping-bag"></i></a>
             </div>
           </div>
         </div>
@@ -99,7 +99,7 @@
           </div>
           <div class="col-md-6 pt-5">
             <h1 class="best-organic-h1">Best Organic Fruits <br> And Vegetables</h1>
-            <div class="text-muted pt-3 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi illum rerum, quod quis veniam quas a dolores vel facere voluptas assumenda blanditiis autem repellendus dignissimos necessitatibus quasi labore earum aut?</div>
+            <div class="text-muted pt-3 text-muted">Tempor erat elitr rebum at Diam dolor diam Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut tempora ducimus laboriosam itaque. Hic ipsum veniam, dolore eius autem totam odit. Ad distinctio facilis ipsum, possimus nostrum odio quis tempora.</div>
             <ul class="list-group pt-5">
               <p> <i class="fa-solid fa-check"></i> Tempor erat elitr Lorem, ipsum.</p>
               <p> <i class="fa-solid fa-check"></i> Aliq diam amet diam et eos</p>
@@ -129,7 +129,7 @@
                 <div class="custom-img">
                   <img src="assist/img/icon-1.png" alt="Organic Products" class="mb-3">
                 </div> 
-                <h5>Natural Process</h5>
+                <h3><b>Natural Process</b></h3>
                 <p>Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed vero dolor duo.</p>
                 <a href="#" class="btn btn-outline-success read-more-btn">Read More</a>
               </div>
@@ -139,7 +139,7 @@
                 <div class="custom-img">
                   <img src="assist/img/icon-2.png" alt="Organic Products" class="mb-3">
                 </div> 
-                <h5>Natural Process</h5>
+                <h3><b>Organic Products</b></h3>
                 <p>Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed vero dolor duo.</p>
                 <a href="#" class="btn btn-outline-success read-more-btn">Read More</a>
               </div>
@@ -149,7 +149,7 @@
                 <div class="custom-img">
                   <img src="assist/img/icon-3.png" alt="Organic Products" class="mb-3">
                 </div> 
-                <h5>Natural Process</h5>
+                <h3><b>Biologically Safe</b></h3>
                 <p>Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed vero dolor duo.</p>
                 <a href="#" class="btn btn-outline-success read-more-btn">Read More</a>
               </div>
